# EnergyPlusBuildSupport

./: CMakeLists.txt  LICENSE  README.md
docs/: README.md
docs/pdf/: index.pdx
docs/pdf/index/: index.idx
docs/src/: Acknowledgments.docx  AuxiliaryPrograms.docx  DocumentTracking.xlsx  E+ Dev Ques Appx G.docx  EMS_Application_Guide.docx  EnergyPlus documentation metatags.txt  EnergyPlusDevelopersQuestionaire.doc  EnergyPlusFigure.doc  ExampleReferenceFormat.doc  ExternalInterfaces_Application_Guide.docx  GettingStarted.docx  InterfaceDeveloper.docx  ModuleDeveloper.docx  OutputDetailsAndExamples.docx  ProgrammingStandard.docx  Report.dot  Tips_and_Tricks_Using_EnergyPlus.docx  Using_EnergyPlus_for_Compliance.docx
docs/src/mods/: README.md
docs/src/mods/for_2014_09_release/: README.md
docs/src/mods/for_2015_03_release/: README.md
docs/src/mods/for_2015_03_release/BG-4734-EMS-warmup-flag/: 4734_EMS_App_Guide.docx
docs/src/mods/for_2015_03_release/BG-4764-HVACSizingSimConcidentPlant/: EngRef_CoincidentPlantSizing.docx  IORef_CoincidentPlantSizing.docx  ModuleDeveloper_HVACSizingSim.docx  OutputDetailsAndExamples_CoincidentPlantSizing.docx
docs/src/mods/for_2015_03_release/BN-75127368_DCFSEC-DataCenterHVACMods/: EngRef_EvapCoolers.docx  EngRef_SingleSpeedDXCoolingCoilModel.docx  IORef_EvapCoolers.docx  IORef_SingleSpeedDXCoolingCoilModel.docx  OutputDetailsAndExam_SingleSpeedDXCoolingCoilModel.docx
docs/src/mods/for_2015_03_release/BN-90285796-IEERMods-EngineeringReference/: BN-90285796-IEERMods-EngineeringReference.docx
docs/src/mods/for_2015_03_release/BN-UnitaryAirCooledCondenser/: EngRef_CondenserConnectedToZones.docx  IORef_CondenserConnectedToZones.docx
docs/src/mods/for_2015_03_release/BN_Gas_Humidifier/: EngRef_SteamHumidifier.docx  IORef_SteamHumidifier_Gas.docx  OutputDetailsAndExamples_SteamHumidifier.docx
docs/src/mods/for_2015_03_release/BOS-VSASHPWH/: VSASHPWH_EngineeringReference.docx  VSASHPWH_InputOutputReference.docx
docs/src/mods/for_2015_03_release/FB-69208874-LBNL_CoilVsSpacePeak/: EngRefSysCoilSizingMod.docx  EngRefSysCoilSizingMod2.docx  IORefSysSizingMod.docx
docs/src/mods/for_2015_03_release/JG-82126334-LifeCycleCostsRecurring/: InputOutputReference-LifeCycleCostRecurring.docx
docs/src/mods/for_2015_03_release/JG-84202472-NewEnvVarToEchoInputIntoAudit/: ModuleDeveloper-EnvironVars.docx
docs/src/mods/for_2015_03_release/LG-4186-DCV documentation/: Engineering Ref_Demand Controlled Ventilation 4186 .docx
docs/src/mods/for_2015_03_release/LG-4806-BeausoleilMorrison convection equations/: Engineering Ref Beausoleil Morrison Equations.docx
docs/src/mods/for_2015_03_release/LG-AdvancedAFN/: EngineeringReference_AdvancedAFN.docx  InputOutputReference_AdvancedAFN.docx
docs/src/mods/for_2015_03_release/MBA-87522778-SQLiteEnhancements/: OutputDetailsAndExamples.docx
docs/src/mods/for_2015_03_release/MJW-1306026-DataCenterITEquipment/: EngineeringReference-ITEquipment.docx  InputOutputReference-ITEquipment.docx
docs/src/mods/for_2015_03_release/MJW-74714908-LowTempRadiant/: InputOutputReference-LowTempRadiant-Issue4239.docx
docs/src/mods/for_2015_03_release/MM-1286412-Basement/: Eng_Ref_SiteGroundDomainBasement.docx  IO_Ref_SiteGroundDomainBasement.docx  NameChange.txt
docs/src/mods/for_2015_03_release/MM-1540218-SlinkyGHX/: Eng_Ref_SlinkyGHX.docx  IO_Ref_SlinkyGHX.docx
docs/src/mods/for_2015_03_release/MM-4660-Vertical_GLHE_Input/: InputOutputReference.docx
docs/src/mods/for_2015_03_release/RS-62494178-detailed-ice-storage-phase-2/: NewIceStorageCurveEngRefDocumentation.docx  (+1 more)
release/: Addressed_Issues-V8-2-0.html  Enhancement_List_Items-V8-1-0.html  Known_Issues-V8-2-0.html  Report Variables 8-3-0 to 8-4-0.csv  Rules8-1-0-to-8-2-0.xls  Rules8-2-0-to-8-3-0.xls  Rules8-3-0-to-8-4-0.xls  VariableNameListAudit.xlsx  license.txt  readme.html
release/Linux/: install.txt  readme.html  running.txt
release/Mac/: EnergyPlus Quick Start Guide.rtf
src/AppGPostProcess/: AppGPostProcess.f90
src/EP-Launch/: MainModule.bas  crashMessage.frm  epl-ui.frm  epl.vbp  epl.vbw  frmAbout.frm  frmDefineViewResults.frm  frmNewQueue.frm  frmOpenFilePanel.frm  frmOptions.frm  frmRunStatus.frm
src/IDFVersionUpdater/: .VersionConverterGUI.rbuistate  VersionConverterGUI.rbres  VersionConverterGUI.rbvcp  Window1.rbfrm
src/IDF_Editor/: IDFEd-main.frm  IDFEd-project.VBP  IDFEd-project.vbw  IDFEditMain.bas  MDI-Parent.frm  about.frm  frmErrorCheck.frm
src/Transition/: CMakeLists.txt  CreateNewIDFUsingRulesV8_2_0.f90  Transition.f90  VCompareUtilityRoutines.f90
src/Transition/SupportingFiles/: Report Variables 8-1-0-009 to 8-2-0.csv
src/epmacro/: CMakeLists.txt  README.md
(+12 files in other folders)
